// Copyright (c) Quinntyne Brown. All Rights Reserved.
// Licensed under the MIT License. See License.txt in the project root for license information.

namespace Core.Braider;

public class BraiderDto
{
    public Guid BraiderId { get; set; }
    public string Name { get; set; }
}

