// Copyright (c) Quinntyne Brown. All Rights Reserved.
// Licensed under the MIT License. See License.txt in the project root for license information.

namespace Core.Braider;

public class GetBraiderByIdResponse
{
    public BraiderDto Braider { get; set; }
}

