@startuml HairPop Domain Model

title HairPop - Domain Model Class Diagram

skinparam backgroundColor #FEFEFE
skinparam classAttributeIconSize 0
skinparam defaultFontName Arial
skinparam classFontStyle bold

package "Entities" {
    class Braider {
        +Guid BraiderId
        +String Name
    }

    class Review {
        +Guid ReviewId
        --
        Planned Fields
        --
        +Guid BraiderId
        +Guid UserId
        +Int Rating
        +String Content
        +DateTime CreatedAt
    }

    class User {
        +Guid UserId
        +String Username
        +String Password
    }
}

package "DTOs" {
    class BraiderDto {
        +Guid BraiderId
        +String Name
    }

    class ReviewDto {
        +Guid ReviewId
    }

    class UserDto {
        +Guid UserId
        +String Username
    }
}

package "Requests" {
    class CreateBraiderRequest {
        +String Name
    }

    class UpdateBraiderRequest {
        +Guid BraiderId
        +String Name
    }

    class DeleteBraiderRequest {
        +Guid BraiderId
    }

    class GetBraidersRequest {
    }

    class GetBraiderByIdRequest {
        +Guid BraiderId
    }
}

package "Responses" {
    class CreateBraiderResponse {
        +BraiderDto Braider
    }

    class UpdateBraiderResponse {
        +BraiderDto Braider
    }

    class DeleteBraiderResponse {
    }

    class GetBraidersResponse {
        +List BraiderDtos
    }

    class GetBraiderByIdResponse {
        +BraiderDto Braider
    }
}

Braider ..> BraiderDto : ToDto
Review ..> ReviewDto : ToDto
User ..> UserDto : ToDto

CreateBraiderRequest ..> CreateBraiderResponse
UpdateBraiderRequest ..> UpdateBraiderResponse
DeleteBraiderRequest ..> DeleteBraiderResponse
GetBraidersRequest ..> GetBraidersResponse
GetBraiderByIdRequest ..> GetBraiderByIdResponse

CreateBraiderResponse --> BraiderDto
UpdateBraiderResponse --> BraiderDto
GetBraiderByIdResponse --> BraiderDto
GetBraidersResponse --> BraiderDto

Review "many" --> "1" Braider : belongs to
Review "many" --> "1" User : written by

@enduml
